--- a/settings.ini
+++ b/settings.ini
@@ -5,9 +5,7 @@ timeout = 1
 # string de query do termohigrometro (ver manual)
 querystring = {u00RDD}
 
-[DatabaseConfig]
-host = lampe-01x
-dbname = ac_dc
-user = lampe
-password = lampe
 
+[HttpConfig]
+url = http://localhost/datalogger/leitura
+api_key = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
